moved editPage styling to individual component and fixed spacing

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -252,19 +252,6 @@ New Trial Page
 }
 
 /* -------------------------------------------------------------------
-Edit Trial Page
---------------------------------------------------------------------*/
-
-.back-btn-edittrial {
-  padding: 10px 20px;
-  border-radius: 20px;
-  background-color: #FFF9C1;
-  font-family: "Lucida Console", Courier, monospace;
-  margin-top: 60px;
-  margin-left: 100px;
-}
-
-/* -------------------------------------------------------------------
 Past Trial Page
 --------------------------------------------------------------------*/
 
